gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-format_args_nl.rs
fn main() {
    format_args_nl!(""); // { dg-error ".E0658." "" { target *-*-* } }
}

